crates/anodized/tests/compile_fail/spec_inside_trait_impl.rs
#![no_main]

use anodized::spec;

#[spec]
trait T {
    fn f(&self);
}

#[spec]
impl T for S {
    #[spec]
    fn f(&self) {}
}

struct S;
